// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<div
  className="sc-bdVaJa jKopLr"
>
  <button
    className="sc-VigVT hegYug sc-gqjmRU yBQjZ"
  >
    Click me
  </button>
</div>
`;

exports[`Styled Anchor Button renders correctly 1`] = `
<div
  className="sc-bdVaJa jKopLr"
>
  <a
    className="sc-jTzLTM ctytKv sc-jzJRlG fKAaUV sc-fjdhpX izaRYO"
    href="#"
  >
    Click me
  </a>
</div>
`;

exports[`Styled Button renders correctly 1`] = `
<div
  className="sc-bdVaJa jKopLr"
>
  <button
    className="sc-VigVT kKVfAK sc-gqjmRU yBQjZ"
  >
    Click me
  </button>
</div>
`;
